force-app/main/default/objects/Employee_Time_Sheet_Line_Item__c/Employee_Time_Sheet_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Employee Time Sheet Line Item</label>
    <nameField>
        <displayFormat>TSLI-{0000}</displayFormat>
        <label>Time Sheet Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Time Sheet Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>