force-app/main/default/objects/Employee_Time_Sheet_Line_Item__c/fields/Check_Out_Km__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Km__c</fullName>
    <label>Check Out Km</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>