force-app/main/default/objects/Employee_Time_Sheet_Line_Item__c/fields/Employee_Time_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Employee_Time_Sheet__c</fullName>
    <label>Employee Time Sheet</label>
    <referenceTo>Employee_Time_Sheet__c</referenceTo>
    <relationshipLabel>Employee Time Sheet Line Items</relationshipLabel>
    <relationshipName>Employee_Time_Sheet_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>