force-app/main/default/objects/Employee_Time_Sheet_Line_Item__c/fields/Entry_Type__c.field-meta.xml
<CustomField>
    <fullName>Entry_Type__c</fullName>
    <label>Entry Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Office</fullName>
            </value>
            <value>
                <fullName>Field Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>