force-app/main/default/objects/Employee_Time_Sheet_Line_Item__c/fields/Is_Own_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Is_Own_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Own Vehicle</label>
    <type>Checkbox</type>
</CustomField>